[gd_scene load_steps=27 format=3 uid="uid://bd1tq8i1ywny1"]

[ext_resource type="Script" path="res://main.gd" id="1_ocixn"]
[ext_resource type="Texture2D" uid="uid://bjns1d0l82h4c" path="res://assets/back.png" id="1_t01xj"]
[ext_resource type="Texture2D" uid="uid://dyw18fooitfv5" path="res://assets/back_selected.png" id="2_67je7"]
[ext_resource type="FontFile" uid="uid://c4hpv5ss4tmdw" path="res://assets/shovelcore_Bw.fnt" id="3_tbymo"]
[ext_resource type="Texture2D" uid="uid://b4ydvl353lxtq" path="res://assets/play.png" id="4_7e1cq"]
[ext_resource type="Texture2D" uid="uid://n87hwolvqhxp" path="res://assets/pause.png" id="5_5bmuf"]
[ext_resource type="FontFile" uid="uid://c318kmtxa18kl" path="res://assets/equal-ink/equal-ink.ttf" id="6_16vgc"]
[ext_resource type="PackedScene" uid="uid://c0t6jos0mxdx0" path="res://meter.tscn" id="7_vu3dy"]
[ext_resource type="Texture2D" uid="uid://bbgw1nonmlyw5" path="res://assets/shovelcore_Bw.png" id="8_8x2e4"]
[ext_resource type="Script" path="res://board.gd" id="8_xy7sm"]
[ext_resource type="Script" path="res://deck.gd" id="9_ufnpj"]
[ext_resource type="PackedScene" uid="uid://dbjbfpi8qxaij" path="res://rules.tscn" id="12_dhs5m"]

[sub_resource type="Animation" id="Animation_thcet"]
length = 0.001
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [220]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fw14n"]
resource_name = "pulse"
length = 4.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [220, 227, 220]
}

[sub_resource type="Animation" id="Animation_uwbqs"]
resource_name = "flash"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xkrbq"]
_data = {
"RESET": SubResource("Animation_thcet"),
"flash": SubResource("Animation_uwbqs"),
"pulse": SubResource("Animation_fw14n")
}

[sub_resource type="LabelSettings" id="LabelSettings_dsjd2"]
font = ExtResource("6_16vgc")

[sub_resource type="LabelSettings" id="LabelSettings_so6ri"]
font = ExtResource("3_tbymo")
font_size = 192

[sub_resource type="LabelSettings" id="LabelSettings_u4fgj"]
font = ExtResource("6_16vgc")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_m035j"]
size = Vector2(256, 128)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kh33v"]
size = Vector2(256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6yuw"]
atlas = ExtResource("8_8x2e4")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge8c5"]
atlas = ExtResource("8_8x2e4")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xq1b"]
atlas = ExtResource("8_8x2e4")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr4ns"]
atlas = ExtResource("8_8x2e4")
region = Rect2(128, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2g5u4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6yuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge8c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xq1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr4ns")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[node name="Main" type="Control"]
custom_minimum_size = Vector2(288, 512)
layout_mode = 3
anchors_preset = 0
offset_right = 288.0
offset_bottom = 512.0
script = ExtResource("1_ocixn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 288.0
offset_bottom = 512.0
alignment = 1

[node name="ButtonHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" type="TextureButton" parent="VBoxContainer/ButtonHBox"]
layout_mode = 2
texture_normal = ExtResource("1_t01xj")
texture_pressed = ExtResource("2_67je7")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ButtonHBox"]
custom_minimum_size = Vector2(184, 0)
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/ButtonHBox/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbymo")
theme_override_font_sizes/font_size = 220
text = "Chesscade"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/ButtonHBox/CenterContainer/Title"]
libraries = {
"": SubResource("AnimationLibrary_xkrbq")
}

[node name="Instructions" type="HBoxContainer" parent="VBoxContainer/ButtonHBox/CenterContainer"]
layout_mode = 2

[node name="Directions" type="VBoxContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions"]
layout_mode = 2

[node name="Keys" type="CenterContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions"]
layout_mode = 2

[node name="Arrows" type="HBoxContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions/Keys"]
layout_mode = 2
alignment = 1

[node name="Left" type="PanelContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions/Keys/Arrows"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Arrow" type="Sprite2D" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions/Keys/Arrows/Left"]
texture = ExtResource("8_8x2e4")
centered = false
hframes = 94
frame = 92

[node name="Down" type="PanelContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions/Keys/Arrows"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Arrow" type="Sprite2D" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions/Keys/Arrows/Down"]
texture = ExtResource("8_8x2e4")
centered = false
hframes = 94
frame = 90

[node name="Right" type="PanelContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions/Keys/Arrows"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Arrow" type="Sprite2D" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions/Keys/Arrows/Right"]
texture = ExtResource("8_8x2e4")
centered = false
hframes = 94
frame = 88

[node name="Action" type="CenterContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Directions/Action"]
layout_mode = 2
text = "Move"
label_settings = SubResource("LabelSettings_dsjd2")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Drop" type="VBoxContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions"]
layout_mode = 2

[node name="Keys" type="CenterContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Drop"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Drop/Keys"]
layout_mode = 2
text = "SPACE"
label_settings = SubResource("LabelSettings_so6ri")

[node name="Action" type="CenterContainer" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Drop"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ButtonHBox/CenterContainer/Instructions/Drop/Action"]
layout_mode = 2
text = "DROP"
label_settings = SubResource("LabelSettings_u4fgj")

[node name="PlayPauseButton" type="TextureButton" parent="VBoxContainer/ButtonHBox"]
layout_mode = 2
texture_normal = ExtResource("4_7e1cq")
texture_pressed = ExtResource("5_5bmuf")

[node name="ReadoutHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Score" parent="VBoxContainer/ReadoutHBox" instance=ExtResource("7_vu3dy")]
layout_mode = 2
title = "Score"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ReadoutHBox"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Time" parent="VBoxContainer/ReadoutHBox" instance=ExtResource("7_vu3dy")]
layout_mode = 2
title = "Time"

[node name="DeckCenter" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DeckAspectRatio" type="AspectRatioContainer" parent="VBoxContainer/DeckCenter"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2

[node name="Deck" type="Sprite2D" parent="VBoxContainer/DeckCenter/DeckAspectRatio"]
texture = SubResource("PlaceholderTexture2D_m035j")
centered = false
script = ExtResource("9_ufnpj")

[node name="BoardCenter" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BoardAspectRatio" type="AspectRatioContainer" parent="VBoxContainer/BoardCenter"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Board" type="Sprite2D" parent="VBoxContainer/BoardCenter/BoardAspectRatio"]
texture = SubResource("PlaceholderTexture2D_kh33v")
centered = false
script = ExtResource("8_xy7sm")

[node name="Countdown" type="AnimatedSprite2D" parent="VBoxContainer/BoardCenter/BoardAspectRatio"]
scale = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_2g5u4")
centered = false

[node name="MenuHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OptionsButton" type="Button" parent="VBoxContainer/MenuHBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_16vgc")
theme_override_font_sizes/font_size = 11
text = "options"

[node name="RulesButton" type="Button" parent="VBoxContainer/MenuHBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_16vgc")
theme_override_font_sizes/font_size = 11
text = "rules"

[node name="CreditsButton" type="Button" parent="VBoxContainer/MenuHBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_16vgc")
theme_override_font_sizes/font_size = 11
text = "credits"

[node name="Rules" parent="." instance=ExtResource("12_dhs5m")]
visible = false
layout_mode = 2

[connection signal="state_changed" from="." to="." method="_on_state_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBox/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBox/PlayPauseButton" to="." method="_on_play_pause_button_pressed"]
[connection signal="animation_finished" from="VBoxContainer/BoardCenter/BoardAspectRatio/Countdown" to="." method="_on_countdown_animation_finished"]
[connection signal="pressed" from="VBoxContainer/MenuHBox/RulesButton" to="." method="_on_rules_button_pressed"]
